--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -14,6 +14,14 @@
   [detailRecordPopupVisible]="detailRecordPopupVisible"
   (detailRecordPopupVisibleChange)="changeDetailRecordVisible()">
 </app-record-detail>
+<p-confirmDialog
+  [style]="{width: '50%'}"
+  acceptLabel="Xác nhận"
+  rejectLabel="Hủy bỏ"
+  key="deleteRecord"
+></p-confirmDialog>
+<p-toast position="top-right" key="deleteComplete"></p-toast>
+<p-toast position="top-right" key="deleteInComplete"></p-toast>
 <div class="container-fluid">
   <div class="row">
     <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
@@ -103,7 +111,7 @@
                   </button>
                 </div>
                 <div class="action-item d-flex justify-content-center align-items-center mx-2">
-                  <button type="button" (click)="initUpdateRecordData(taskList.taskId)">
+                  <button type="button" (click)="handleOnClickDeleteRecord(taskList.taskId)">
                     <i class="bi bi-trash-fill"></i>
                   </button>
                 </div>
