--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
@@ -37,3 +37,13 @@
 .create-button{
   width: auto;
 }
+
+:host ::ng-deep .p-dialog-footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .p-button{
+    margin-left: 30px;
+  }
+}
+
