--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -120,7 +120,7 @@
           </ng-template>
           <ng-template pTemplate="emptymessage">
             <tr>
-              <td colspan="8">Không tìm thấy biên bản kiểm tra</td>
+              <td colspan="8">Không tìm thấy mục kiểm tra</td>
             </tr>
           </ng-template>
         </p-table>
