--- a/src/app/features/post-login/inspection/record/record-detail/record-detail.component.scss
+++ b/src/app/features/post-login/inspection/record/record-detail/record-detail.component.scss
@@ -1,3 +1,47 @@
+@import "../../../../../../assets/scss/base";
+
 *{
   font-size: 16px;
+}
+
+.p-inputtext{
+  border-radius: 8px;
+}
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
+
+.record-document{
+  .col-md-8, .col-md-4{
+    input{
+      width: 100%;
+    }
+  }
+
+  .input-file {
+    .p-inputtext {
+      border-radius: 8px 0 0 8px;
+    }
+
+    button {
+      background-color: $primary;
+      border-radius: 0 8px 8px 0;
+
+      &:hover,
+      &:active {
+        background-color: $primary-hover;
+        border-color: $primary-hover;
+      }
+    }
+  }
 }
