Complete inspection mock API

--- a/src/app/features/post-login/inspection/component/file-item/file-item.component.html
+++ b/src/app/features/post-login/inspection/component/file-item/file-item.component.html
@@ -4,6 +4,7 @@
   [style]="{ width: '90vw', height: '100vh' }"
   [draggable]="false"
   [resizable]="false"
+  appendTo="body"
 >
   <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
     <div class="spinner-border text-center" role="status"></div>
