--- a/src/app/features/post-login/inspection/inspection-information/inspection-information.component.scss
+++ b/src/app/features/post-login/inspection/inspection-information/inspection-information.component.scss
@@ -8,4 +8,13 @@
   font-size: 15px;
 }
 
+:host ::ng-deep .p-tabmenu-nav{
+  .p-menuitem-link{
+    text-decoration: none;
+    color: $primary;
+  }
+  .p-menuitem-link-active{
+    border-bottom-color: $primary;
+  }
+}
 
