--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -10,7 +10,7 @@
   rejectLabel="Hủy bỏ"
   key="confirmDeleteInspector"
 ></p-confirmDialog>
-<div *ngIf="selectedInspectors?.length == 0 && listEditable; else inspectorList" class="text-center">
+<div *ngIf="selectedInspectors && selectedInspectors.length == 0 && listEditable; else inspectorList" class="text-center">
   <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban KTNB</button>
 </div>
 <ng-template #inspectorList>
@@ -18,7 +18,7 @@
     <div class="list-inspector-header px-3 text-center">
       <h5 class="mx-auto mt-2">Danh sách thanh tra</h5>
       <div class="total">
-        <span class="mx-auto">Tổng số: {{selectedInspectors?.length || 0}}</span>
+        <span class="mx-auto" *ngIf="selectedInspectors">Tổng số: {{selectedInspectors.length || 0}}</span>
       </div>
     </div>
 
