--- a/src/app/features/post-login/inspection/component/file-item/file-item.component.html
+++ b/src/app/features/post-login/inspection/component/file-item/file-item.component.html
@@ -15,7 +15,7 @@
   </ng-template>
 </p-dialog>
 
-<div class="file-item py-3 d-flex" *ngIf="document; else documentEmpty" (click)="openNewTab(document.documentLink)">
+<div class="file-item py-1 d-flex" *ngIf="document; else documentEmpty" (click)="openNewTab(document.documentLink)">
   <div class="file-item-icon d-flex justify-content-center align-items-center">
     <img src="assets/img/pdf_logo.svg" alt=""/>
   </div>
@@ -41,7 +41,7 @@
       </p>
       <p class="mb-0">
         <span>Ngày tạo: </span>
-        <span class="fw-bold">{{ document.uploadedDate | date : "MM/dd/yyyy" }}</span>
+        <span class="fw-bold">{{ document.uploadedDate | date : "dd/MM/yyyy" }}</span>
     </div>
   </div>
 </div>
