--- a/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
+++ b/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
@@ -39,11 +39,11 @@
             </p-tag>
           </div>
         </div>
-        <h5 class="mb-2">Tài liệu công văn</h5>
+        <h5 class="my-2">Tài liệu công văn</h5>
         <p-tabMenu [model]="tabs" [activeItem]="activeTab"></p-tabMenu>
-        <div class="file-item-container" [@fadeInOut]="fileItemContainerVisible ? 'visible' : 'hidden'">
+        <div class="file-item-container">
           <div *ngIf="issueDocumentVisibility">
-            <div *ngFor="let doc of inspection.issueDocuments; let i = index">
+            <div *ngFor="let doc of inspection.issueDocuments; let i = index" class="mb-2">
               <app-file-item [document]="inspection.issueDocuments[i]"></app-file-item>
             </div>
           </div>
