--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -290,11 +290,11 @@
             Xem lịch sử phê duyệt tài liệu
           </button>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <button pButton class="mb-2" (click)="redirectToIssue()">
             Kế hoạch kiểm tra
           </button>
-        </div>
+        </div> -->
       </div>
 
       <div
