--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -12,7 +12,9 @@
     cursor: pointer;
     height: 160px;
     border-radius: 15px;
-    background-color: #f0f3f5;
+    background-color: #f9fafb;
+    font-size: 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     transition: all 0.6s ease;
     .font-weight-bold {
         color: #686f73;
