--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -259,11 +259,11 @@
             Xem lịch sử phê duyệt tài liệu
           </button>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <button pButton class="mb-2" (click)="redirectToIssue()">
             Kế hoạch kiểm tra
           </button>
-        </div>
+        </div> -->
       </div>
       <ng-container *ngIf="lastDocs?.departmentDocument">
         <div
