--- a/src/app/components/user-profile/change-password/change-password.component.html
+++ b/src/app/components/user-profile/change-password/change-password.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div>
-      <label>Mật khẩu</label>
+      <label>Mật khẩu mới</label>
     </div>
     <div>
       <input type="password" formControlName="changePassword" class="form-control">
@@ -24,7 +24,7 @@
     </div>
 
     <div>
-      <label>Nhập lại mật khẩu</label>
+      <label>Nhập lại mật khẩu mới</label>
     </div>
     <div>
       <input type="password" formControlName="confirmPassword" class="form-control">
